correctly applying merge, + extra check, in assignment